--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "masterarbeit",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "d3": "3.5.5",
+    "jquery": "1.11.3",
+    "material-ui": "^0.20.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-json-tree": "^0.11.2",
+    "react-scripts": "3.0.1",
+    "recharts": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
